@@ -1,3 +1,8 @@
+2013-11-05  Steven G. Kargl <kargl@gcc.gnu.org>
+
+	PR fortran/58989
+	* gfortran.dg/reshape_6.f90: New test.
+
 2013-10-05  Jeff Law  <law@redhat.com>
 
 	* gcc.dg/pr38984.c: Add -fno-isolate-erroneous-paths.
